[gd_scene load_steps=6 format=3 uid="uid://chbgqnqhkkxw1"]

[ext_resource type="Texture2D" uid="uid://di0c62wqxxpxk" path="res://assets/textures/widgets/others/UIbg.png" id="1_emaeb"]
[ext_resource type="Script" path="res://src/widgets/w_name_input_popup.gd" id="1_xrah5"]
[ext_resource type="Texture2D" uid="uid://dpv4fww0l2lpr" path="res://assets/textures/widgets/others/buttonSmall.png" id="2_5x0vx"]

[sub_resource type="LabelSettings" id="LabelSettings_r84o6"]
font_size = 10
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_y0sat"]
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="w_name_input_popup" type="MarginContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xrah5")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("1_emaeb")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2
text = "Your score broke the record, leave your name!"
label_settings = SubResource("LabelSettings_r84o6")
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="te_name" type="TextEdit" parent="VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Your name?"

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer3"]
layout_mode = 2

[node name="btn_quit" type="TextureButton" parent="VBoxContainer/MarginContainer3/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 20)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("2_5x0vx")

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer3/HBoxContainer/btn_quit"]
layout_mode = 2
offset_left = 52.0
offset_top = 28.0
offset_right = 84.0
offset_bottom = 51.0
size_flags_horizontal = 4
text = "退出"
label_settings = SubResource("LabelSettings_y0sat")
horizontal_alignment = 1
vertical_alignment = 1

[node name="btn_confirm" type="TextureButton" parent="VBoxContainer/MarginContainer3/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 20)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("2_5x0vx")

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer3/HBoxContainer/btn_confirm"]
layout_mode = 2
offset_left = 52.0
offset_top = 28.0
offset_right = 84.0
offset_bottom = 51.0
size_flags_horizontal = 4
text = "確認"
label_settings = SubResource("LabelSettings_y0sat")
horizontal_alignment = 1
vertical_alignment = 1
